packages/ui/collapse/src/index.less
@osui-collapse-class-prefix: osui-collapse;

.@{osui-collapse-class-prefix} {
    &:not(.@{ant-prefix}-collapse-ghost) {
        &.@{ant-prefix}-collapse > .@{ant-prefix}-collapse-item {
            border-bottom: 1px solid var(--collapse-border-color);
        }

        &.@{ant-prefix}-collapse {
            border: 1px solid var(--collapse-border-color);
            border-bottom: 0;
        }

        .@{ant-prefix}-collapse-content {
            border-top: 1px solid var(--collapse-border-color);
        }
    }

    .@{ant-prefix}-collapse-item {
        .@{ant-prefix}-collapse-header {
            display: flex;
            align-items: center;
            height: var(--collapse-header-height);
            padding-top: 0;
            padding-bottom: 0;
            color: var(--theme-text-color);
            font-weight: var(--collapse-header-font-weight);
            font-size: var(--collapse-header-font-size);
            line-height: var(--collapse-header-height);

            .icon-wrapper {
                top: auto;
                width: 16px;
                height: 16px;
                color: var(--collapse-expand-icon-color);
                background: var(--collapse-expand-icon-bg);
                border-radius: 50%;

                svg {
                    position: absolute;
                    top: 0;
                    right: 0;
                }
            }
        }
    }

    .@{ant-prefix}-collapse-item.@{ant-prefix}-collapse-item-disabled {
        .@{ant-prefix}-collapse-header {
            background-color: var(--collapse-content-bg);
        }

        .@{ant-prefix}-collapse-header,
        .@{ant-prefix}-collapse-arrow {
            color: var(--collapse-disabled-color);
        }
    }

    .@{ant-prefix}-collapse-item > .@{ant-prefix}-collapse-content > .@{ant-prefix}-collapse-content-box {
        .content-padding(42px);
    }
}

.content-padding(@content-padding-left) {
    padding-top: var(--collapse-content-box-padding-top);
    padding-bottom: var(--collapse-content-box-padding-bottom);
    padding-left: @content-padding-left;
}

// 对层级的控制
.nest(@level, @content-padding, @icon-padding) {
    .@{osui-collapse-class-prefix}-level-@{level} {
        .@{ant-prefix}-collapse:not(.@{ant-prefix}-collapse-ghost) {
            border-top: 0;
            border-right: 0;
            border-left: 0;

            > .@{ant-prefix}-collapse-item:last-child {
                border-bottom: 0;
            }
        }

        &.@{ant-prefix}-collapse-item > .@{ant-prefix}-collapse-content > .@{ant-prefix}-collapse-content-box {
            padding: 0 !important;
        }

        .@{osui-collapse-class-prefix}-level-child {
            .@{ant-prefix}-collapse-item > .@{ant-prefix}-collapse-content > .@{ant-prefix}-collapse-content-box {
                .content-padding(@content-padding);
            }

            .@{ant-prefix}-collapse-header {
                padding-left: @content-padding !important;

                .icon-wrapper.@{ant-prefix}-collapse-arrow {
                    left: @icon-padding;
                }
            }
        }
    }
}

.nest(1, 64px, 42px);
.nest(2, 86px, 64px);

